objects/bofc__BOFCVRules__c.object
<CustomObject>
    <fields>
        <fullName>bofc__Action__c</fullName>
        <label>Action</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>bofc__OName__c</fullName>
        <label>OName</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>bofc__ObjectName__c</fullName>
        <label>ObjectName</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>bofc__OrgName__c</fullName>
        <label>OrgName</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>bofc__RuleName__c</fullName>
        <label>RuleName</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>bofc__active__c</fullName>
        <defaultValue>false</defaultValue>
        <label>active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>bofc__description__c</fullName>
        <label>description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>bofc__errorConditionFormula__c</fullName>
        <label>errorConditionFormula</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>bofc__errorDisplayField__c</fullName>
        <label>errorDisplayField</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>bofc__errorMessage__c</fullName>
        <label>errorMessage</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>bofc__fullName__c</fullName>
        <label>fullName</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>BOFCVRules</label>
    <nameField>
        <displayFormat>BVR-{0000}</displayFormat>
        <label>BOFCVRules Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>BOFCVRules</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>